# dual-logger

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
dual_logging/: __init__.py  duallogger.py
dual_logging/config/: __init__.py  log_config.py  log_context.py
dual_logging/core/: __init__.py  base_logger.py  console_logger.py  file_logger.py
examples/: demo.py
tests/: test_logger.py
